# logger

./: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  Calculator.cpp  Calculator.hpp  Dispatcher.cpp  Dispatcher.hpp  FileReader.cpp  FileReader.hpp  ILogEntry.hpp  LogEntry.cpp  LogEntry.hpp  LogEntryInt.hpp  LogParser.cpp  LogParser.hpp  log.txt  main.cpp
test/: AddTest.cpp  CMakeLists.txt  DispatcherTest.cpp  FileReaderTest.cpp  LogEntryTest.cpp  LogParserTest.cpp  MockLoggerEntry.hpp
